After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725389 - Autoscrolling : Jumps to last page when cursor is brought over tool bar
Autoscrolling : Jumps to last page when cursor is brought over tool bar
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-28 10:32 UTC by Anuj Khare
Modified: 2014-05-21 08:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Prevent jumps to last page when autoscrolling (980 bytes, patch)
2014-05-20 14:15 UTC, Marek Kašík
committed Details | Review
Remove redundant code (879 bytes, patch)
2014-05-20 14:18 UTC, Marek Kašík
committed Details | Review

Description Anuj Khare 2014-02-28 10:32:29 UTC
Steps to reproduce :
1. Open a document with multiple pages.
2. Go to any page after the first.
3. Start Autoscroll upwards.
4. Move the (autoscroll) cursor over the tool bar near the search button.

Actual results :
Evince jumps to the last page in the document.

Expected results :
It should continue to autoscroll upwards.

Does this happen every time?
No, but it happens fairly often, all over the tool bar.

This happens to me a lot since I tend to move the mouse a little too far upwards while autoscrolling.
Comment 1 André Klapper 2014-02-28 12:40:13 UTC
Which Evince version is this about?
Comment 2 Anuj Khare 2014-02-28 15:30:20 UTC
This happens in the current master (v3.11.90) as well as the one I have installed on my computer (v3.10.0).

Sorry I forgot to mention the version earlier.
Comment 3 Marek Kašík 2014-05-20 14:15:09 UTC
Created attachment 276866 [details] [review]
Prevent jumps to last page when autoscrolling

This patch fixes the problem for me. The problem is in filling of unsigned integer "scroll_info.last_y" with negative value.

Marek
Comment 4 Marek Kašík 2014-05-20 14:18:44 UTC
Created attachment 276867 [details] [review]
Remove redundant code

I've hit this during fixing this bug so I'm attaching it here instead of filling a new bug.
Comment 5 Carlos Garcia Campos 2014-05-20 17:44:05 UTC
Review of attachment 276866 [details] [review]:

Ok, push it to both branches, please.
Comment 6 Carlos Garcia Campos 2014-05-20 17:47:20 UTC
Review of attachment 276867 [details] [review]:

hmm, I don't understand that if either, let's remove it, yes :-) Thanks
Comment 7 Marek Kašík 2014-05-21 08:14:39 UTC
Comment on attachment 276866 [details] [review]
Prevent jumps to last page when autoscrolling

Thank you for the review, I've pushed it to master and gnome-3-12.